# tray-racer

./: Cargo.toml  README.md  pan.sh
convergence-test/: Cargo.toml  README.md  deriv-err.csv  graph-step-stats.py  point-err.csv  ratios.csv  ss-0.01.csv  ss-0.02.csv  ss-0.04.csv  ss-0.08.csv  step-err.csv
convergence-test/src/: main.rs
src/: main.rs  renderer.rs  vec4.rs
src/shader/: fragment.glsl  vertex.glsl
tray-racer-app/: Cargo.toml
tray-racer-app/src/: main.rs  renderer.rs
tray-racer-cli/: Cargo.toml
tray-racer-cli/src/: main.rs
tray-racer-lib/: Cargo.toml
tray-racer-lib/src/: lib.rs  renderer.rs  vec4.rs
