[package]
name = "tray-racer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"

glow = "0.13.1"
raw-window-handle = { version = "0.5" }
egui = { version = "0.27", git = "https://github.com/emilk/egui" }
egui_glow = { version = "0.27", features=["winit"], git = "https://github.com/emilk/egui" }
winit = { version = "0.29.10", features = ["rwh_05"] }
glutin = { version = "0.31.2" }
glutin-winit = { version = "0.4.2" }
web-time = "0.2"

log = "0.4"
env_logger = "0.11"
